# scrAIper

./: Dockerfile  README.md  docker-compose.yaml  main.py
pdf2json/: Dockerfile  package-lock.json  package.json  server.js
scraiper/: Dockerfile  json_schema.json  main.py  pyproject.toml
scraiper/scripts/: init.pgsql
scraiper_api/: Dockerfile  api.py  docker-entrypoint.sh  pyproject.toml
scripts/: init.pgsql  init.sh
