[tool.poetry]
name = "scraiper"
version = "0.1.0"
description = ""
authors = ["terminaldweller <devi@terminaldweller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapeghost = "^0.5.1"
psycopg = "^3.1.12"
psycopg-pool = "^3.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pylint = "^3.0.2"
bandit = "^1.7.5"
ruff = "^0.1.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
