[tool.poetry]
name = "scraiper"
version = "0.1.0"
description = ""
authors = ["terminaldweller <devi@terminaldweller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapeghost = "^0.5.1"
psycopg = "^3.1.12"
psycopg-pool = "^3.1.8"
tabula-py = "^2.8.2"
requests = "^2.31.0"
pysocks = "^1.7.1"
certifi = "^2023.11.17"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pylint = "^3.0.2"
bandit = "^1.7.5"
ruff = "^0.1.2"
black = "^23.10.1"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
