[tool.poetry]
name = "scraiper-api"
version = "0.1.0"
description = ""
authors = ["terminaldweller <devi@terminaldweller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
ruff = "^0.1.3"
pylint = "^3.0.2"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
